--- a/index.html
+++ b/index.html
@@ -157,6 +157,16 @@ input.cellInput {
 var boggleWords;
 
 letterGrid =
+    [['O','L','C','R'],
+    ['C','E','S','E'],
+    ['K','W','I','T'],
+    ['C','O','U','N']];
+
+dice = ["AAEEGN","ELRTTY","AOOTTW","ABBJOO","EHRTVW","CIMOTU",
+            "DISTTY","EIOSST","DELRVY","ACHOPS","HIMNQU","EEINSU",
+            "EEGHNW","AFFKPS","HLNNRZ","DEILRX"];
+/*	
+letterGrid =
     [['O','L','C','R','A'],
     ['C','E','S','E','B',],
     ['K','W','I','T','C',],
@@ -169,7 +179,7 @@ dice = ["AAAFRS",  "AAEEEE",  "AAFIRS",  "ADENNN",  "AEEEEM",
 "CEIILT",  "CEILPT",  "CEIPST",  "DDHNOT",  "DHHLOR",  
 "DHLNOR",  "DHLNOR",  "EIIITT",  "EMOTTT",  "ENSSSU",  
 "FIPRSY",  "GORRVW",  "IPRRRY",  "NOOTUW",  "OOOTTU"];
-	
+*/	
 var trie = null;
 
 var showDice = function(letterGrid) {
